--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,15 +16,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.10
+      - name: Set up Python 3.9
         uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: "3.9"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
-          if [ -f Pipfile.lock ]; then pipenv install; fi
+          if [ -f Pipfile.lock ]; then pipenv sync; fi
       - name: Lint with Black
         run: |
           pipenv run black src --check
