--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,21 +13,37 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.9]
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.9
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
-          python-version: "3.9"
-      - name: Install dependencies
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Pipenv
         run: |
-          python -m pip install --upgrade pip
-          pip install pipenv
-          if [ -f Pipfile.lock ]; then pipenv sync; fi
+          python -m pip install --upgrade pipenv wheel
+
+      - name: Cache Pipenv
+        uses: actions/cache@v3.0.2
+        with:
+          # A list of files, directories, and wildcard patterns to cache and restore
+          path: ~/.local/share/virtualenvs/
+          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        run: |
+          if [ -f Pipfile.lock ]; then pipenv install --deploy --dev; fi
+
       - name: Lint with Black
         run: |
           pipenv run black src --check
+
       - name: Test with pytest
         run: |
           pipenv run pytest
