--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,3 +19,17 @@ services:
       WWWUSER: "${WWWUSER}"
     volumes:
       - "../src:/code/src"
+  db:
+    image: postgres:14-alpine
+    restart: always
+    ports:
+      - "${DB_PORT:-5432}:5432"
+    environment:
+      POSTGRES_DB: ${DB_DATABASE}
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+    volumes:
+      - db_data:/var/lib/postgresql/data
+
+volumes:
+  db_data:
