Add base DB handler and env variables

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
 APP_NAME="ExpertSystem"
 APP_SERVICE="web"
 
+DB_CONNECTION=postgres
+DB_HOST=db
+DB_PORT=5432
+DB_DATABASE=example_db
+DB_USERNAME=dbuser
+DB_PASSWORD=password
+
 CORS_ORIGINS="http://localhost,localhost"
 CORS_CREDENTIALS=true
 CORS_METHODS="*"
