--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_SERVICE="web"
 DB_CONNECTION=postgres
 DB_HOST=db
 DB_PORT=5432
+DB_PORT_EXT=5432
 DB_DATABASE=example_db
 DB_USERNAME=dbuser
 DB_PASSWORD=password
