--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     image: postgres:14-alpine
     restart: always
     ports:
-      - "${DB_PORT:-5432}:5432"
+      - "${DB_PORT_EXT:-5432}:5432"
     environment:
       POSTGRES_DB: ${DB_DATABASE}
       POSTGRES_USER: ${DB_USERNAME}
