:technologist: Move alembic conf file to proj root

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       WWWUSER: "${WWWUSER}"
     volumes:
       - "../src:/code/src"
+      - "../alembic.ini:/code/alembic.ini"
     networks:
       - internal
 
