--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -42,6 +42,8 @@ RUN useradd -ms /bin/bash --no-user-group -g $WWWGROUP -u 1337 sail
 
 COPY ./src /code/src
 
+COPY ./alembic.ini /code/alembic.ini
+
 USER sail
 
 CMD ["./venv/bin/python", "-m", "uvicorn", "src.main:main", "--host", "0.0.0.0", "--port", "80", "--reload"]
