Rename postgres driver to match newer version

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME="ExpertSystem"
 APP_SERVICE="web"
 
-DB_CONNECTION=postgres
+DB_CONNECTION=postgresql
 DB_HOST=db
 DB_PORT=5432
 DB_PORT_EXT=5432
