--- a/.github/workflows/jenkins-job-trigger.yml
+++ b/.github/workflows/jenkins-job-trigger.yml
@@ -1,8 +1,8 @@
 name: Jenkins Job Trigger
 on:
   pull_request:
-    branches: [ release/* ]
-    types: [ closed ]
+    branches: [release/**]
+    types: [closed]
 
   workflow_dispatch:
 
@@ -18,4 +18,3 @@ jobs:
           user: "example"
           token: ${{ secrets.GITHUBMESCOBRADTOKEN }}
           job: "MES-CoBraD - ExpertSystem Srv"
-
