--- a/.github/workflows/jenkins-job-trigger.yml
+++ b/.github/workflows/jenkins-job-trigger.yml
@@ -1,7 +1,7 @@
 name: Jenkins Job Trigger
 on:
   pull_request:
-    branches: [release/**]
+    branches: ["releases/**"]
     types: [closed]
 
   workflow_dispatch:
