:bug: Fix branch prefix name

--- a/.github/workflows/jenkins-job-trigger.yml
+++ b/.github/workflows/jenkins-job-trigger.yml
@@ -1,7 +1,8 @@
 name: Jenkins Job Trigger
 on:
   pull_request:
-    branches: ["releases/**"]
+    branches:
+      - "release/*"
     types: [closed]
 
   workflow_dispatch:
