--- a/.github/workflows/jenkins-job-trigger.yml
+++ b/.github/workflows/jenkins-job-trigger.yml
@@ -1,4 +1,5 @@
 name: Jenkins Job Trigger
+
 on:
   pull_request:
     branches:
@@ -9,7 +10,7 @@ on:
 
 jobs:
   build:
-    if: github.event.pull_request.merged == 'true'
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Jenkins Job
