[DEVOPS] Change docke image's name for builds

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ CORS_HEADERS="*"
 COMPOSE_PROJECT_NAME="${APP_NAME}"
 SAIL_FILES="docker/docker-compose.yml"
 SAIL_ENV_FILES="./.env"
+
+DOCKER_IMAGE="evolutionprojects/mescobrad-es-srv"
