--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: Python application
 
 on:
   pull_request:
-    branches: [development, master]
+    branches: [development, master, "release/**"]
 
 permissions:
   contents: read
