--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: ./docker/Dockerfile
       args:
         WWWGROUP: "${WWWGROUP}"
-    image: local/expertsystem:latest
+    image: "${DOCKER_IMAGE:-local/expertsystem-srv}"
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: "on-failure"
