:rotating_light: Fix Black to ignore auto gen files from alembic

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Lint with Black
         run: |
-          pipenv run black src --check
+          pipenv run black src --check --exclude src/alembic/versions/
 
       - name: Test with pytest
         run: |
