💥✨ Add Minio client with conf environment

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ DB_DATABASE=example_db
 DB_USERNAME=dbuser
 DB_PASSWORD=password
 
+S3_ENDPOINT="localhost"
+S3_ACCESS_KEY_ID="access_key"
+S3_SECRET_ACCESS_KEY="secret_key"
+
 CORS_ORIGINS="http://localhost,localhost"
 CORS_CREDENTIALS=true
 CORS_METHODS="*"
