👔 Add AI API client with a fn and an endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 APP_NAME="ExpertSystem"
 APP_SERVICE="web"
 
+ARTIFICIAL_INTELLIGENCE_API_BASE_URL="http://ai"
+
 DB_CONNECTION=postgresql
 DB_HOST=db
 DB_PORT=5432
