--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_SERVICE="web"
 ARTIFICIAL_INTELLIGENCE_API_BASE_URL="http://ai"
 
 DB_CONNECTION=postgresql
+DB_SCHEMA=expert_system
 DB_HOST=db
 DB_PORT=5432
 DB_PORT_EXT=5432
