🏷️ Add DA and QB external API clients

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ APP_NAME="ExpertSystem"
 APP_SERVICE="web"
 
 ARTIFICIAL_INTELLIGENCE_API_BASE_URL="http://ai"
+QUERY_BUILDER_API_BASE_URL="http://localhost"
+DATA_ANALYTICS_API_BASE_URL="http://localhost"
 
 DB_CONNECTION=postgresql
 DB_SCHEMA=expert_system
