--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ alembic = "*"
 psycopg2-binary = "*"
 minio = "*"
 trino = "*"
+python-keycloak = "*"
+cryptography = "*"
 
 [dev-packages]
 black = "*"
