🔧 Add env vars for oauth and encryption

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,14 @@ SAIL_FILES="docker/docker-compose.yml"
 SAIL_ENV_FILES="./.env"
 
 DOCKER_IMAGE="evolutionprojects/mescobrad-es-srv"
+
+OAUTH_HOST="https://sso.example.com/auth/"
+OAUTH_TOKEN_URL="https://sso.example.com/token/"
+OAUTH_CLIENT_ID="client-id"
+OAUTH_CLIENT_SECRET="client-secret"
+OAUTH_REALM="realm"
+OAUTH_CALLBACK_URL="https://app.example.com/"
+OAUTH_SIGN_OUT_URL="https://app.example.com/auth/logout/"
+OAUTH_LOGIN_SCOPE="openid,profile"
+
+ENCRYPTION_KEY=""
