🔧 Update env to allow proxy hosts

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 APP_NAME="ExpertSystem"
 APP_SERVICE="web"
+APP_HOSTS="http://localhost"
+APP_ROOT="/"
 
 ARTIFICIAL_INTELLIGENCE_API_BASE_URL="http://ai"
 QUERY_BUILDER_API_BASE_URL="http://localhost"
