🚑 Fix ES UI's base url

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_SERVICE="web"
 APP_HOSTS="http://localhost"
 APP_ROOT="/"
 
+EXPERT_SYSTEM_UI_BASE_URL="http://web"
 ARTIFICIAL_INTELLIGENCE_API_BASE_URL="http://ai"
 QUERY_BUILDER_API_BASE_URL="http://localhost"
 DATA_ANALYTICS_API_BASE_URL="http://localhost"
