🏷️ Add trino client

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,12 @@ S3_ENDPOINT="localhost"
 S3_ACCESS_KEY_ID="access_key"
 S3_SECRET_ACCESS_KEY="secret_key"
 
+TRINO_HOST="localhost"
+TRINO_PORT=443
+TRINO_SCHEME="https"
+TRINO_USERNAME="test_user"
+TRINO_PASSWORD=""
+
 CORS_ORIGINS="http://localhost,localhost"
 CORS_CREDENTIALS=true
 CORS_METHODS="*"
