✨🐛 Add workspaces and solve bugs

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ DATA_ANALYTICS_API_BASE_URL="http://localhost"
 
 DB_CONNECTION=postgresql
 DB_SCHEMA=expert_system
+DB_PLATFORM_SCHEMA=public
 DB_HOST=db
 DB_PORT=5432
 DB_PORT_EXT=5432
