--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,6 @@ jinja2 = "*"
 sqlalchemy = "*"
 pytest = "*"
 requests = "*"
-alembic = "*"
 psycopg2-binary = "*"
 minio = "*"
 trino = "*"
@@ -18,6 +17,8 @@ python-keycloak = "*"
 cryptography = "*"
 httpx = "*"
 black = "*"
+alembic = "*"
+pydantic = "~=1.10.17"
 
 [dev-packages]
 black = "*"
